Progress towards Jdk11 support including: - Use of Uno-Jar 0.99.1 which now supports package level   resource loading which re-enables the JesterJ Appender - Recent Tika - Bleeding Edge Cassandra, patched with CASSANDRA-15494, and compatible   with the guava version required by Tika - Gradle 6 build